fix header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,10 @@
     gap:20px;
     margin-top:10px;
  }
-
+ 
 .search-outer {
     display:flex;
-    justify-content:center;
+    justify-content:end;
     width:100%;
 }
 
